# UNHUMAN

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateProject.sh  LICENSE  imgui.ini  readme.md
.github/workflows/: build-linux.yml  build-windows.yml
UHE/: CMakeLists.txt
UHE/src/: UHE.h  uhepch.h
UHE/src/Platform/Linux/: Linux.cpp  Linux.h  LinuxPlatformUtils.cpp
UHE/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
UHE/src/Platform/Vulkan/: VulkanBackendState.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameContext.cpp  VulkanFrameContext.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicPipeline.cpp  VulkanGraphicPipeline.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTexture2D.cpp  (+4 more)
UHE/src/Platform/Vulkan/RenderGraph/: RenderGraphVulkan.cpp  RenderGraphVulkan.h
UHE/src/Platform/Vulkan/UI/: VulkanImGuiBackend.cpp  VulkanImGuiBackend.h
UHE/src/Platform/Windows/: WindowInput.cpp  WindowPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
UHE/src/UHE/Core/: Application.cpp  Core.h  EntryPoint.h  LayerStack.cpp  LayerStack.h  Log.h  UIID.h  keyCodes.h  mouseButtonCodes.h
UHE/src/UHE/Debug/: TracySetup.cpp  TracySetup.h
UHE/src/UHE/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
UHE/src/UHE/Physics/: PhysicsSystem3D.cpp  PhysicsSystem3D.h
UHE/src/UHE/RHI/: DeletionQueue.h  RHICommadBuffer.cpp  RHICommadBuffer.h  RHIDevice.cpp  RHIDevice.h  RHIShader.cpp  RHIShader.h  RHISwapChain.cpp  RHISwapChain.h  RHITexture.h  RHITypes.h
UHE/src/UHE/Renderer/: Buffer.h  EditorCamera.cpp  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SlangCompiler.cpp  SlangCompiler.h  Texture.cpp  Texture.h
UHE/src/UHE/Renderer2D/: OrthograpicCameraContoroller.cpp  Renderer2D.cpp
UHE/src/UHE/Renderer3D/: Animation.h  Animator.cpp  Animator.h  LightSystem.cpp  LightSystem.h  LoadModel.cpp  LoadModel.h  Renderer3D.cpp  Renderer3D.h  SSAO.cpp  SSAO.h
UHE/src/UHE/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.h  SceneSerializer.cpp
UHE_EDITOR/: CMakeLists.txt
UHE_EDITOR/assets/model/: cube.gltf  license.txt  scene.gltf  wuthering_waves_-_camellya_mascot.glb
UHE_EDITOR/assets/scene/: animescene.unhuman  model.unhuman  physics_test.unhuman
UHE_EDITOR/assets/shaders/: Basic3D.slang  Grid.slang  PBRBasic.slang  Texture.slang
UHE_EDITOR/assets/shaders/pbrShader/: filtercube.slang  genbrdflut.slang  irradicancecube.slang  pbribl.slang  pbrtexture.slang  prefilterenvmap.slang  skybox.slang
UHE_EDITOR/src/: Editor.cpp  Editor.h
UHE_EDITOR/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierachyPanel.cpp
build-release/: .ninja_deps  .ninja_log  TracyTargets.cmake  build.ninja
sandbox/: CMakeLists.txt
sandbox/src/: ModelTestLayer.cpp  ModelTestLayer.h  SandboxApp.cpp  TriangleShaders.h  TriangleTestLayer.cpp  TriangleTestLayer.h  sandbox2D.cpp
script/: Setup.py
